--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ that optimize the safety and quality of human life.
 
     <!-- Values -->
     <section class="values">
-          <div class="value"><img src="img/group.svg">Benefit from Collaboration</div>
-          <div class="value"><img src="img/policy.svg">Achieve Standardization</div>
-          <div class="value"><img src="img/speech.svg">Establish Accountability</div>
+          <div class="value"><img src="img/group.svg"><br>Benefit from Collaboration</div>
+          <div class="value"><img src="img/policy.svg"><br>Achieve Standardization</div>
+          <div class="value"><img src="img/speech.svg"><br>Establish Accountability</div>
     </section>
     <!-- /Values -->
 
