--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ that optimize the safety and quality of human life.
     <div class="container text-center">
       <h1 class="text-center" style="background-color: #199EB8; color: white; margin-bottom: 10px; border-radius: 5px;">Who Should Join Acro?</h1>
        
-           <p>If you're. . . <br><br></p>
+           <p style="font-size: 2rem; font-weight: 700px;">If you're. . . <br></p>
 
            <div class="stakeholders-content">
             <div class="t1">Designing robots and looking to increase the intelligence and safety of your creations.</div>
@@ -229,7 +229,7 @@ that optimize the safety and quality of human life.
             <div class="t4">A government or organization seeking to protect end-users from new technology.</div>
         </div>
 
-          <p>. . . then Acro is an association for you.<br><br></p>
+          <p style="font-size: 2rem;">. . . then Acro is the association for you.<br><br></p>
           
       </div>
   </section>
