--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="img/favicon.ico" rel="icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700|Roboto:400,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -63,7 +63,7 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="#top">Acro.ai</a></li>
+          <li><a href="#top"></a></li>
           <li><a href="#problem">Problem</a></li>
           <li><a href="#solution">Solution</a></li>
           <li><a href="#stakeholders">Stakeholders</a></li>
@@ -83,7 +83,7 @@
         <div class="col-md-12">
           <a href="index.html" title="Home"><h1 style="color: white;">Acro.ai</h1></a>
           <p class="hero-brand" style="color: white; font-style: italic">
-          Association for Cloud Robot Operators
+          Association of Cloud Robot Operators
         </p>
         </div>
       </div>
@@ -278,11 +278,6 @@ that optimize the safety and quality of human life.
               <p>info@acro.ai</p>
             </div>
 
-            <div>
-              <i class="fa fa-phone"></i>
-              <p>+1 5589 55488 55s</p>
-            </div>
-
           </div>
         </div>
 
@@ -299,7 +294,7 @@ that optimize the safety and quality of human life.
 
           <div class="col-lg-6 col-xs-12 text-lg-left text-center">
             <p class="copyright-text">
-              © Acro.ai
+              © ACRO
             </p>
           </div>
 
@@ -307,7 +302,7 @@ that optimize the safety and quality of human life.
             <ul class="list-inline">
 
               <li class="list-inline-item">
-                <a href="#top">Acro.ai</a>
+                <a href="#top">ACRO</a>
               </li>
 
               <li class="list-inline-item">
