--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <div class="row">
         <div class="col-md-12">
           <a href="index.html" title="Home"><h1 style="color: white;">Acro.ai</h1></a>
+          <hr style="width: 50%" />
           <p class="hero-brand" style="color: white; font-style: italic">
           Association of Cloud Robot Operators
         </p>
@@ -89,7 +90,7 @@
       </div>
 
       <div class="col-md-12">
-        <h1>
+          <h1>
             Robots we can live with
           </h1>
 
