--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-md-12">
-          <a href="index.html" title="Home"><h1 style="color: white;">Acro.ai</h1></a>
+          <a href="index.html" title="Home"><h1 style="color: white; font-size: 50px;">ACRO</h1></a>
           <hr style="width: 50%" />
           <p class="hero-brand" style="color: white; font-style: italic">
           Association of Cloud Robot Operators
@@ -94,7 +94,7 @@
             Robots we can live with
           </h1>
 
-        <p class="tagline">
+        <p class="tagline" style="background-color: rgba(240,255,255,0.5); border-radius: 10px; color: black; font-weight: 600">
           ACRO’s mission is to
  serve as the world’s most trusted generator of policy 
 for the operation of cloud-connected robots 
@@ -218,7 +218,7 @@ that optimize the safety and quality of human life.
     <div class="container text-center">
       <h1 class="text-center" style="background-color: #199EB8; color: white; margin-bottom: 10px; border-radius: 5px;">Who Should Join Acro?</h1>
        
-           <p style="font-size: 2rem; font-weight: 700px;">If you're. . . <br></p>
+           <p style="font-size: 2rem; font-weight: 700px; margin-bottom: 20px;">If you're. . . <br></p>
 
            <div class="stakeholders-content">
             <div class="t1">Designing robots and looking to increase the intelligence and safety of your creations.</div>
@@ -230,7 +230,7 @@ that optimize the safety and quality of human life.
             <div class="t4">A government or organization seeking to protect end-users from new technology.</div>
         </div>
 
-          <p style="font-size: 2rem;">. . . then Acro is the association for you.<br><br></p>
+          <p style="font-size: 2rem; margin-top: 20px;">. . . then Acro is the association for you.<br><br></p>
           
       </div>
   </section>
@@ -274,7 +274,7 @@ that optimize the safety and quality of human life.
         <div class="col-lg-3 col-md-4">
           <div class="info">
 
-            <div>
+            <div class="text">
               <i class="fa fa-envelope"></i>
               <p>info@acro.ai</p>
             </div>
@@ -295,7 +295,7 @@ that optimize the safety and quality of human life.
 
           <div class="col-lg-6 col-xs-12 text-lg-left text-center">
             <p class="copyright-text">
-              © ACRO
+              © 2018 ACRO, PBC. All rights reserved.
             </p>
           </div>
 
